@@ -1,0 +1,2 @@
+import pyparsing
+pyparsing.show_best_practices()
