@@ -72,7 +72,8 @@ Version 3.3.0 - under development
 - Added AI instructions so that AI agents can be prompted with best practices
   for generating parsers using pyparsing code. These instructions are in the
   `ai/best_practices.md` file, and can be accessed programmatically by calling
-  `pyparsing.show_best_practices()`
+  `pyparsing.show_best_practices()` or running `python -m pyparsing.ai.show_best_practices`
+  from the command line, after installing the `pyparsing` package.
 
 
 Version 3.2.5 - September, 2025
